code modification additional image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Open Weather</string>
+    <string name="api_key">91a7b39c1cfd41554426d2703075a759</string>
 </resources>
